--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -66,7 +66,7 @@ ul#menu li a.current
 {
 	border-radius: 15px;
 	background-color: rgba(255,255,255,0.6);
-	height: 320px;
+	height: 350px;
 	width: 400px;
 	vertical-align: center;
 	text-align: center;
@@ -102,7 +102,13 @@ td.forum
 
 .btnAlign
 {
-
+	margin-top: 20px;
+	bottom: 5px !important;
+}
+.btnAlign1
+{
+	margin-top: 20px;
+	margin-left: 15px;
 	bottom: 5px !important;
 }
 
@@ -111,6 +117,6 @@ td.forum
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: calc(100vh - 150px);
+	height: calc(91vh - 150px);
 	text-align: center;
 }
