--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -67,7 +67,7 @@ ul#menu li a.current
 {
 	border-radius: 5px;
 	background-color: rgba(255,255,255,0.6);
-	height: 350px;
+	height: 450px;
 	width: 400px;
 	vertical-align: center;
 	text-align: center;
@@ -82,9 +82,13 @@ ul#menu li a.current
 	border: 3px solid #06C;
 }
 
-td.forum
+.DateLogin
 {
-	padding: 10px;
+	text-align: left;
+}
+
+.forum
+{
 	color: #000000;
 	font-size: 17px;
 	font-weight: 500;
@@ -94,8 +98,9 @@ td.forum
 .titlu
 {
 	font-family: 'Roboto', 'serif';
-	text-shadow: 2px 2px 6px #FFF;
 	color: #000000;
+	font-size: 38px;
+	font-weight: 600;
 }
 
 .menu
@@ -143,4 +148,3 @@ td.forum
 {
 	overflow: hidden;
 }
-
