--- a/backend/templates/logare.html
+++ b/backend/templates/logare.html
@@ -18,13 +18,36 @@
 
 <body class="noScroll">
   <script type="text/javascript">
-    const buton1 = document.getElementById("ButonLogare");
-    console.log(buton1);
-    buton1.addEventListener("click",function(){
+   async function postData(url = '', data = {}) {
+  // Default options are marked with *
+  const response = await fetch(url, {
+    method: 'POST', // *GET, POST, PUT, DELETE, etc.
+    mode: 'cors', // no-cors, *cors, same-origin
+    cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+    credentials: 'same-origin', // include, *same-origin, omit
+    headers: {
+      'Content-Type': 'application/json'
+      // 'Content-Type': 'application/x-www-form-urlencoded',
+    },
+    redirect: 'follow', // manual, *follow, error
+    referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+    body: JSON.stringify(data) // body data type must match "Content-Type" header
+    });
+  return response.json(); // parses JSON response into native JavaScript objects
+  }
+   
+   const buton1 = document.getElementById("ButonLogare");
+   const buton2 = document.getElementById("ButonInregistrare");
+  console.log(buton2);
+
+    buton2.addEventListener("click",function(){         //add hash
        const adresa = document.getElementById("ad");
        const numarMatricol = document.getElementById("nrm");
        const cuvantCheie = document.getElementById("pass");
        console.log(adresa, numarMatricol, cuvantCheie);
+       postData("http://127.0.0.1:5000/login", {"adresa":adresa, "numarMatricol":numarMatricol, "cuvantCheie":cuvantCheie}).then(data=>{
+         console.log(data)
+       });
     })
   </script>
   <div>
