--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -77,6 +77,34 @@ ul#menu li a.current
     flex-direction: column;
 }
 
+.confirm
+{
+	border-radius: 5px;
+	background-color: rgba(255,255,255,0.6);
+	height: 200px;
+	width: 550px;
+	vertical-align: center;
+	text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.register
+{
+	border-radius: 5px;
+	background-color: rgba(255,255,255,0.6);
+	height: 450px;
+	width: 400px;
+	vertical-align: center;
+	text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .txtfield:focus
 {
 	border: 3px solid #06C;
@@ -109,7 +137,7 @@ ul#menu li a.current
 	background-color: #FFF;
 	display: flex;
 	align-items: center;
-	margin-left: 80px;
+	margin-left: 20px;
 }
 
 .nameLogo
@@ -124,15 +152,21 @@ ul#menu li a.current
 .btnAlignL
 {
 	margin-left: 0px;
-	margin-top: 30px;
+	margin-top: 25px;
 	bottom: 5px !important;
 }
 
 .btnAlignR
 {
 	margin-left: 90px;
-	margin-top: 30px;
+	margin-top: 25px;
 	bottom: 5px !important;
+}
+
+.btnAlignRConfirm
+{
+	margin-top: 25px;
+	margin-left: 33%;
 }
 
 #continut1
