--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -157,13 +157,13 @@ ul#menu li a.current
 	
 	color:rgb(0, 0, 0);
 
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255, 0.9);
 
 	position: fixed;
 	overflow-y: scroll;
 	overflow-x: hidden;
 
-	height: 100vh;
+	height: calc(100vh - 100px);
 
 	z-index: 1;
 }
@@ -214,4 +214,15 @@ ul#menu li a.current
 	margin-left: 2vw;
 	margin-right: 2vw;
 	text-align: left;
+}
+
+#chart_voturi
+{
+	margin-left: 5vw;
+	margin-right: 5vw;
+}
+
+#continutRezultate_detalii li
+{
+	text-align:left;
 }
