JS pentru pagina de rezultate. Se pot schimba: titlul descrierea numele itemilor (candidatilor) numarul de voturi
Poate afisa:
numarul total de voturi
cate voturi au fiecare item
itemul castigator

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -278,9 +278,10 @@ ul#menu li a.current
 	margin-right: 5vw;
 }
 
-#continutRezultate_detalii li
+#continutRezultate_detalii li, span
 {
-	text-align:left;
+	color:rgb(24, 37, 82);
+	text-align: left;
 }
 
 #despre
