--- a/backend/templates/error404.html
+++ b/backend/templates/error404.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <h3 id="e" style="font-family:Arial, Helvetica, sans-serif; font-size:120%;color:grey;">
-            Adresa URL solicitata nu a fost gasita pe acest server.
+            Adresa URL solicitată nu a fost gasită pe acest server.
         </h3>
         <div id="f" style="background-image: url('../static/images/sad.png');">
 
