--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -216,7 +216,7 @@ ul#menu li a.current
 	background-color: rgba(255, 255, 255, 0.9);
 
 	position: fixed;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 
 	height: calc(90vh - 100px);
@@ -285,135 +285,176 @@ ul#menu li a.current
 
 #despre
 {
+	border-radius: 5px;
+
+	height: 70vh;
 	width: 80vw;
-	top: 100px;
+	top: 130px;
 	
 	color:rgb(0, 0, 0);
 
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(255, 255, 255, 0.9);
 
 	position: fixed;
-	overflow-y: scroll;
+	align-items: center;
+	text-align: center;
+
+	overflow-y: auto;
 	overflow-x: hidden;
 
-	height: 74vh;
-
 	z-index: 1;
-}
-#despre hr {
-
-	
-    width: 270px;
-    background-image: linear-gradient(9deg, rgb(24, 37, 82), transparent);
-    
-    border: 0;
-    height: 1px;
 }
 
 #despre h1
 {
 	margin-top: 16px;
-	margin-bottom: 32px;
 	color:rgb(37, 59, 136);
-	text-align: left;
 }
 
-#despre h3
+#despre h3,h5
 {
-	margin-top: 16px;
-	margin-bottom: 16px;
-	margin-left: 5vw;
-	margin-right: 2vw;
 	color:rgb(24, 37, 82);
-	
-}
-
-#despre h5
-{
-	margin-top: 64px;
-	margin-bottom: 16px;
-	margin-left: 2vw;
-	margin-right: 2vw;
-	color:rgb(24, 37, 82);
-	
 }
 
 #despre p
 {
 	color:rgb(24, 37, 82);
-	margin-left: 2vw;
-	margin-right: 2vw;
-
 }
-#despreFE{
-	margin-top: 100px;
-	width: 400px;
+
+#CEO
+{
+	margin-top: 25px;
+	margin-bottom: 50px;
+}
+
+#CEO hr {
+    width: 10%;
+
+    background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+
+    border: 0;
+    height: 1px;
+}
+
+#despreTL
+{
+	margin-bottom: 50px;
+
+	display: flex;
+	align-items: center;
+	text-align: center;
+	flex-direction: column;
+}
+
+#despreTL hr {
+    width: 25%;
+
+    background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+
+    border: 0;
+    height: 1px;
+}
+
+#despreTL table
+{
+	font-family: "Lato", sans-serif;
+	font-size: 14px;
+	color: rgb(24, 37, 82);
+}
+
+#despreTL td.r
+{
+	width: 50%;
 	text-align: left;
 }
-#despreFE hr {
-    width: 270pxpx;
-    background-image: linear-gradient(9deg, rgb(24, 37, 82), transparent);
+
+#despreTL td.m
+{
+	max-width: 30px;
+	min-width: 30px;
+}
+
+#despreTL td.l
+{
+	width: 50%;
+	text-align: right;
+}
+
+#despreTeam
+{
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+
+	margin-left: 50px;
+	margin-right: 50px;
+}
+
+#despreFE
+{
+	width: 33%;
+
+	text-align: left;
+	flex-direction: column;
+}
+
+#despreFE hr 
+{
+    width: 80%;
+	margin-left: 0;
+
+    background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
     border: 0;
     height: 1px;
 }
+
 #despreFE p
 {
-	color:rgb(24, 37, 82);
-	margin-left: 6vw;
-	margin-right: 2vw;
+	text-align: left;
+}
 
-}
-#despreTL hr {
-    width: 270px;
-    background-image: linear-gradient(9deg, rgb(24, 37, 82), transparent);
-    border: 0;
-    height: 1px;
-	
-}
-#CEO hr {
-    width: 100px;
-    background-image: linear-gradient(9deg, rgb(24, 37, 82), transparent);
-    border: 0;
-    height: 1px;
-}
-#CEO p
+#despreBK
 {
-	
-	color:rgb(24, 37, 82);
-	margin-left: 6vw;
-	margin-right: 2vw;
+	width: 33%;
 
-}
-#CEO{
-	margin-bottom:100px
-}
-#despreBC{
-	margin-top:-289px;
-}
-#despreBC hr {
-    width: 250px;
-    background-image: linear-gradient(9deg, rgb(24, 37, 82), transparent);
-    border: 0;
-    height: 1px;
-}
-#despreBC p
-{
-	color:rgb(24, 37, 82);
-	margin-left: 6vw;
-	margin-right: 2vw;
-
-}
-#despreBK{
-	width: 400;
 	text-align: right;
-	margin-right: 50px;
-	margin-top:-288px;
+	flex-direction: column;
 }
+
 #despreBK hr
 {
-	width: 200px;
-    background-image: linear-gradient(9deg, rgb(24, 37, 82), transparent);
+	width: 80%;
+	margin-right: 0;
+
+    background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82));
     border: 0;
     height: 1px;
 	margin-right:-5px;
+}
+
+#despreBK p
+{
+	text-align: right;
+}
+
+#despreBC
+{
+	width: 34%;
+
+	text-align: center;
+	flex-direction: column;
+}
+
+#despreBC hr 
+{
+    width: 80%;
+
+    background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82), transparent);
+    border: 0;
+    height: 1px;
+}
+
+#despreBC p
+{
+	text-align: center;
 }
