--- a/backend/templates/logare - Copy.html
+++ b/backend/templates/logare - Copy.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css"> -->
-  <link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css" />
+  <link href= "{{ url_for('static',filename='css/bootstrap-4.4.1.css') }}" rel="stylesheet" type="text/css" />
   <!-- <script src="js/bootstrap.bundle.js"></script> -->
   <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/style.css') }}" type="text/css" media="all" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -24,7 +24,7 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src="images/logo.svg" height="72px" />
+        <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
         <div class="nameLogo">VoteBoat</div>
       </div><!-- End of Nav Div -->
       <div class="header">
