--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -1,3 +1,25 @@
+::-webkit-scrollbar
+{
+	width: 12px;
+}
+
+::-webkit-scrollbar-track
+{
+	box-shadow: 0 0 5px grey inset;
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background: rgb(0, 120, 240);
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover
+{
+	background: rgb(0, 102, 204);
+}
+
 body{ 
 	margin:0px; 
     padding:0px;  
@@ -77,6 +99,34 @@ ul#menu li a.current
     flex-direction: column;
 }
 
+.confirm
+{
+	border-radius: 5px;
+	background-color: rgba(255,255,255,0.6);
+	height: 200px;
+	width: 550px;
+	vertical-align: center;
+	text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.register
+{
+	border-radius: 5px;
+	background-color: rgba(255,255,255,0.6);
+	height: 450px;
+	width: 400px;
+	vertical-align: center;
+	text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .txtfield:focus
 {
 	border: 3px solid #06C;
@@ -109,7 +159,7 @@ ul#menu li a.current
 	background-color: #FFF;
 	display: flex;
 	align-items: center;
-	margin-left: 80px;
+	margin-left: 20px;
 }
 
 .nameLogo
@@ -124,15 +174,21 @@ ul#menu li a.current
 .btnAlignL
 {
 	margin-left: 0px;
-	margin-top: 30px;
+	margin-top: 25px;
 	bottom: 5px !important;
 }
 
 .btnAlignR
 {
 	margin-left: 90px;
-	margin-top: 30px;
+	margin-top: 25px;
 	bottom: 5px !important;
+}
+
+.btnAlignRConfirm
+{
+	margin-top: 25px;
+	margin-left: 33%;
 }
 
 #continut1
@@ -147,4 +203,258 @@ ul#menu li a.current
 .noScroll
 {
 	overflow: hidden;
+}
+
+#continutRezultate
+{
+	border-radius: 5px;
+	width: 80vw;
+	top: 130px;
+	
+	color:rgb(0, 0, 0);
+
+	background-color: rgba(255, 255, 255, 0.9);
+
+	position: fixed;
+	overflow-y: auto;
+	overflow-x: hidden;
+
+	height: calc(90vh - 100px);
+
+	z-index: 1;
+}
+
+#continutRezultate hr {
+
+	margin-left: 2vw;
+	margin-right: 2vw;
+
+    height: 32px;
+    background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
+    
+    border: 0;
+    height: 1px;
+}
+
+#continutRezultate h1
+{
+	margin-top: 16px;
+	margin-bottom: 32px;
+	color:rgb(37, 59, 136);
+	text-align: middle;
+}
+
+#continutRezultate h3
+{
+	margin-top: 16px;
+	margin-bottom: 16px;
+	margin-left: 2vw;
+	margin-right: 2vw;
+	color:rgb(24, 37, 82);
+	text-align: left;
+}
+
+#continutRezultate h5
+{
+	margin-top: 64px;
+	margin-bottom: 16px;
+	margin-left: 2vw;
+	margin-right: 2vw;
+	color:rgb(24, 37, 82);
+	text-align: left;
+}
+
+#continutRezultate p
+{
+	color:rgb(24, 37, 82);
+	margin-left: 2vw;
+	margin-right: 2vw;
+	text-align: left;
+}
+
+#chart_voturi
+{
+	margin-left: 5vw;
+	margin-right: 5vw;
+}
+
+#continutRezultate_detalii li
+{
+	text-align:left;
+}
+
+#despre
+{
+	border-radius: 5px;
+
+	height: 70vh;
+	width: 80vw;
+	top: 130px;
+	
+	color:rgb(0, 0, 0);
+
+	background-color: rgba(255, 255, 255, 0.9);
+
+	position: fixed;
+	align-items: center;
+	text-align: center;
+
+	overflow-y: auto;
+	overflow-x: hidden;
+
+	z-index: 1;
+}
+
+#despre h1
+{
+	margin-top: 16px;
+	color:rgb(37, 59, 136);
+}
+
+#despre h3,h5
+{
+	color:rgb(24, 37, 82);
+}
+
+#despre p
+{
+	color:rgb(24, 37, 82);
+}
+
+#CEO
+{
+	margin-top: 25px;
+	margin-bottom: 50px;
+}
+
+#CEO hr {
+    width: 10%;
+
+    background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+
+    border: 0;
+    height: 1px;
+}
+
+#despreTL
+{
+	margin-bottom: 50px;
+
+	display: flex;
+	align-items: center;
+	text-align: center;
+	flex-direction: column;
+}
+
+#despreTL hr {
+    width: 25%;
+
+    background-image: linear-gradient(9deg, transparent, rgb(24, 37, 82), transparent);
+
+    border: 0;
+    height: 1px;
+}
+
+#despreTL table
+{
+	font-family: "Lato", sans-serif;
+	font-size: 14px;
+	color: rgb(24, 37, 82);
+}
+
+#despreTL td.r
+{
+	width: 50%;
+	text-align: left;
+}
+
+#despreTL td.m
+{
+	max-width: 30px;
+	min-width: 30px;
+}
+
+#despreTL td.l
+{
+	width: 50%;
+	text-align: right;
+}
+
+#despreTeam
+{
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+
+	margin-left: 50px;
+	margin-right: 50px;
+}
+
+#despreFE
+{
+	width: 33%;
+
+	text-align: left;
+	flex-direction: column;
+}
+
+#despreFE hr 
+{
+    width: 80%;
+	margin-left: 0;
+
+    background-image: linear-gradient(90deg, rgb(24, 37, 82), transparent);
+    border: 0;
+    height: 1px;
+}
+
+#despreFE p
+{
+	text-align: left;
+}
+
+#despreBK
+{
+	width: 33%;
+
+	text-align: right;
+	flex-direction: column;
+}
+
+#despreBK hr
+{
+	width: 80%;
+	margin-right: 0;
+
+    background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82));
+    border: 0;
+    height: 1px;
+	margin-right:-5px;
+}
+
+#despreBK p
+{
+	text-align: right;
+}
+
+#despreBC
+{
+	width: 34%;
+
+	text-align: center;
+	flex-direction: column;
+}
+
+#despreBC hr 
+{
+    width: 80%;
+
+    background-image: linear-gradient(90deg, transparent, rgb(24, 37, 82), transparent);
+    border: 0;
+    height: 1px;
+}
+
+#despreBC p
+{
+	text-align: center;
 }
