logareC si Inregistrare

--- a/backend/templates/inregistrare.html
+++ b/backend/templates/inregistrare.html
@@ -1,110 +1,207 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!--Favicon code-->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href= "{{ url_for('static',filename='images/site.webmanifest') }}">
-  <link rel="mask-icon" href= "{{ url_for('static',filename='images/safari-pinned-tab.svg') }}" color="#0066cc">
-  <link rel="shortcut icon" href= "{{ url_for('static',filename='images/favicon.ico') }}">
-  <meta name="apple-mobile-web-app-title" content="VoteBoat">
-  <meta name="application-name" content="VoteBoat">
-  <meta name="msapplication-TileColor" content="#0066cc">
-  <meta name="msapplication-config" content= "{{ url_for('static',filename='images/browserconfig.xml') }}">
-  <meta name="theme-color" content="#ffffff">
-  <!--Favicon code end-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-  <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href= "{{ url_for('static',filename='css/style.css') }}" type="text/css" media="all" />
-  <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Favicon code-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{{ url_for('static',filename='images/apple-touch-icon.png') }}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{{ url_for('static',filename='images/favicon-32x32.png') }}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{{ url_for('static',filename='images/favicon-16x16.png') }}"
+    />
+    <link
+      rel="manifest"
+      href="{{ url_for('static',filename='images/site.webmanifest') }}"
+    />
+    <link
+      rel="mask-icon"
+      href="{{ url_for('static',filename='images/safari-pinned-tab.svg') }}"
+      color="#0066cc"
+    />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static',filename='images/favicon.ico') }}"
+    />
+    <meta name="apple-mobile-web-app-title" content="VoteBoat" />
+    <meta name="application-name" content="VoteBoat" />
+    <meta name="msapplication-TileColor" content="#0066cc" />
+    <meta
+      name="msapplication-config"
+      content="{{ url_for('static',filename='images/browserconfig.xml') }}"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!--Favicon code end-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static',filename='css/style.css') }}"
+      type="text/css"
+      media="all"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static',filename='css/animatie.css') }}"
+      type="text/css"
+      media="all"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
-      rel="stylesheet">
-  <title>VoteBoat</title>
-</head>
+      rel="stylesheet"
+    />
+    <title>VoteBoat</title>
+  </head>
 
-<body class="noScroll">
-  <div>
-    <div id="container">
-      <div id="banner"></div>
-      <div class="menu">
-        <img src= "{{ url_for('static',filename='images/logo.svg) }}" height="72px" />
-        <div class="nameLogo">VoteBoat</div>
-      </div><!-- End of Nav Div -->
-      <div class="header">
-        <div id="continut1">
-          <div style="padding:210px 210px 110px 210px;">
-            <div id="continut2">
-              <div style="padding:0px 20px 20px 20px;">
+  <body class="noScroll">
+    <div>
+      <div id="container">
+        <div id="banner"></div>
+        <div class="menu">
+          <img
+            src="{{ url_for('static',filename='images/logo.svg') }}"
+            height="72px"
+          />
+          <div class="nameLogo">VoteBoat</div>
+        </div>
+        <!-- End of Nav Div -->
+        <div class="header">
+          <div id="continut1">
+            <div style="padding: 210px 210px 110px 210px">
+              <div id="continut2">
+                <div style="padding: 0px 20px 20px 20px">
+                  <div id="login" class="register">
+                    <p class="titlu">ÎNREGISTRARE</p>
 
+                    <div class="DateLogin">
+                      <form style="width: 316.64px; height: 330.5px">
+                        <div class="form-group">
+                          <label for="ad" class="forum">Adresă e-uvt</label>
+                          <input
+                            type="text"
+                            id="ad"
+                            class="form-control"
+                            name="firstname"
+                            placeholder="Adresă e-uvt"
+                          />
+                        </div>
 
-                <div id="login" class="register">
+                        <div class="form-group">
+                          <label for="nrm" class="forum">Număr matricol</label>
+                          <input
+                            type="text"
+                            id="nrm"
+                            class="form-control"
+                            name="lastname"
+                            placeholder="Număr matricol"
+                          />
+                        </div>
 
-                  <p class="titlu">ÎNREGISTRARE</p>
+                        <div class="form-group">
+                          <label for="pass" class="forum">Text-cheie</label>
+                          <input
+                            type="password"
+                            id="pass"
+                            class="form-control"
+                            name="pss"
+                            placeholder="********"
+                          />
+                        </div>
 
-                  <div class="DateLogin">
-                    <form style="width: 316.64px; height: 330.5px;">
-                      <div class="form-group">
-                        <label for="ad" class="forum">Adresă e-uvt</label>
-                        <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
-                      </div>
-
-                      <div class="form-group">
-                        <label for="nrm" class="forum">Număr matricol</label>
-                        <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Număr matricol">
-                      </div>
-
-                      <div class="form-group">
-                        <label for="pass" class="forum">Text-cheie</label>
-                        <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
-                      </div>
-
-                      <button type="submit" class="btn btn-primary btnAlignRConfirm">Înregistrare</button>
-                    </form>
-
-
+                        <button
+                          type="submit"
+                          class="btn btn-primary btnAlignRConfirm"
+                        >
+                          Înregistrare
+                        </button>
+                      </form>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <!--Waves Container-->
+          <div>
+            <svg
+              class="waves"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 24 150 28"
+              preserveAspectRatio="none"
+              shape-rendering="auto"
+            >
+              <defs>
+                <path
+                  id="gentle-wave"
+                  d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+                />
+              </defs>
+              <g class="parallax">
+                <use
+                  xlink:href="#gentle-wave"
+                  x="48"
+                  y="0"
+                  fill="rgba(255,255,255,0.7)"
+                />
+                <use
+                  xlink:href="#gentle-wave"
+                  x="48"
+                  y="3"
+                  fill="rgba(255,255,255,0.5)"
+                />
+                <use
+                  xlink:href="#gentle-wave"
+                  x="48"
+                  y="5"
+                  fill="rgba(255,255,255,0.3)"
+                />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+              </g>
+            </svg>
+          </div>
+          <!--Waves end aici a fost Denis-->
         </div>
-
-        <!--Waves Container-->
-        <div>
-          <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-            <defs>
-              <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-            </defs>
-            <g class="parallax">
-              <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
-              <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-              <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-              <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-            </g>
-          </svg>
-        </div>
-        <!--Waves end aici a fost Denis-->
-
-
       </div>
     </div>
-  </div>
-  <!--Header ends-->
-  <!-- partial -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-
+    <!--Header ends-->
+    <!-- partial -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
