--- a/backend/templates/logareC.html
+++ b/backend/templates/logareC.html
@@ -37,7 +37,7 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src= "{{ url_for('static',filename='images/logo.svg) }}" height="72px" />
+        <img src= "{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
         <div class="nameLogo">VoteBoat</div>
       </div><!-- End of Nav Div -->
       <div class="header">
