--- a/backend/templates/Despre.html
+++ b/backend/templates/Despre.html
@@ -2,42 +2,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Favicon code-->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
-    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#0066cc">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="VoteBoat">
-    <meta name="application-name" content="VoteBoat">
-    <meta name="msapplication-TileColor" content="#0066cc">
-    <meta name="msapplication-config" content="images/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <!--Favicon code end-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/animatie.css" type="text/css" media="all" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
-        rel="stylesheet">
-    <title>VoteBoat</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--Favicon code-->
+  <link rel="apple-touch-icon" sizes="180x180" href= "{{ url_for('static',filename='images/apple-touch-icon.png') }}">
+  <link rel="icon" type="image/png" sizes="32x32" href= "{{ url_for('static',filename='images/favicon-32x32.png') }}">
+  <link rel="icon" type="image/png" sizes="16x16" href= "{{ url_for('static',filename='images/favicon-16x16.png') }}">
+  <link rel="manifest" href= "{{ url_for('static',filename='images/site.webmanifest') }}">
+  <link rel="mask-icon" href= "{{ url_for('static',filename='images/safari-pinned-tab.svg') }}" color="#0066cc">
+  <link rel="shortcut icon" href= "{{ url_for('static',filename='images/favicon.ico') }}">
+  <meta name="apple-mobile-web-app-title" content="VoteBoat">
+  <meta name="application-name" content="VoteBoat">
+  <meta name="msapplication-TileColor" content="#0066cc">
+  <meta name="msapplication-config" content= "{{ url_for('static',filename='images/browserconfig.xml') }}">
+  <meta name="theme-color" content="#ffffff">
+  <!--Favicon code end-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+  <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/style.css') }}" type="text/css" media="all" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
+  <title>VoteBoat</title>
 </head>
 
 <body class="noScroll">
-    <div>
-        <div id="container">
-            <div id="banner"></div>
-            <div class="menu">
-                <img src="images/logo.svg" height="72px" />
+  <div>
+    <div id="container">
+      <div id="banner"></div>
+      <div class="menu">
+        <img src= "{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
                 <div class="nameLogo">VoteBoat</div>
             </div><!-- End of Nav Div -->
             <div class="header">
