--- a/backend/templates/rezultate.html
+++ b/backend/templates/rezultate.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Favicon code-->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href= "{{ url_for('static',filename='images/apple-touch-icon.png') }}">
+  <link rel="icon" type="image/png" sizes="32x32" href= "{{ url_for('static',filename='images/favicon-32x32.png') }}">
+  <link rel="icon" type="image/png" sizes="16x16" href= "{{ url_for('static',filename='images/favicon-16x16.png') }}">
   <link rel="manifest" href= "{{ url_for('static',filename='images/site.webmanifest') }}">
   <link rel="mask-icon" href= "{{ url_for('static',filename='images/safari-pinned-tab.svg') }}" color="#0066cc">
   <link rel="shortcut icon" href= "{{ url_for('static',filename='images/favicon.ico') }}">
@@ -26,9 +26,7 @@
   <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
   <title>VoteBoat</title>
 </head>
 
@@ -37,7 +35,7 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src= "{{ url_for('static',filename='images/logo.svg) }}" height="72px" />
+        <img src= "{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
         <div class="nameLogo">VoteBoat</div>
             </div><!-- End of Nav Div -->
             <div class="header">
