--- a/backend/templates/logareC.html
+++ b/backend/templates/logareC.html
@@ -18,9 +18,8 @@
   <meta name="msapplication-config" content= "{{ url_for('static',filename='images/browserconfig.xml') }}">
   <meta name="theme-color" content="#ffffff">
   <!--Favicon code end-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-  <script src="js/bootstrap-4.4.1.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <link rel="stylesheet" href= "{{ url_for('static',filename='css/style.css') }}" type="text/css" media="all" />
   <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
@@ -37,8 +36,16 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src= "{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
-        <div class="nameLogo">VoteBoat</div>
+        <a href="logareC.html" class="linkLogo">
+          <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
+          <div class="nameLogo">VoteBoat</div>
+        </a>
+        <div class="menuItems">
+          <a href="Despre.html" title="Creează un vot nou">
+            <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
+          </a>
+          <p>Creează un vot nou</p>
+        </div>
       </div><!-- End of Nav Div -->
       <div class="header">
         <div id="continut1">
@@ -106,9 +113,18 @@
   </div>
   <!--Header ends-->
   <!-- partial -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  
+  <!-- Bootstrap scripts -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+  crossorigin="anonymous"></script>
+  <!--Bootstrap scripts end-->
 </body>
 
 </html>
