--- a/backend/templates/confirmare.html
+++ b/backend/templates/confirmare.html
@@ -94,7 +94,7 @@
                   <div id="login" class="confirm">
                     <p class="titlu">A?i confirmat cu succes!</p>
                     <img
-                      src="{{ url_for('static',filename='images/emailverf.svg) }}"
+                      src="{{ url_for('static',filename='images/emailverf.svg') }}"
                       height="80px"
                     />
                   </div>
