--- a/backend/templates/logareC.html
+++ b/backend/templates/logareC.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Favicon code-->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180"   href= "{{ url_for('static',filename='images/apple-touch-icon.png') }}>
+  <link rel="icon" type="image/png" sizes="32x32"  href= "{{ url_for('static',filename='images/favicon-32x32.png') }}>
+  <link rel="icon" type="image/png" sizes="16x16"  href= "{{ url_for('static',filename='images/favicon-16x16.png') }}>>
   <link rel="manifest" href= "{{ url_for('static',filename='images/site.webmanifest') }}">
   <link rel="mask-icon" href= "{{ url_for('static',filename='images/safari-pinned-tab.svg') }}" color="#0066cc">
   <link rel="shortcut icon" href= "{{ url_for('static',filename='images/favicon.ico') }}">
@@ -73,8 +73,8 @@
                     <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
                   </div>
 
-                  <button type="submit" class="btn btn-primary btnAlignL">Autentificare</button>
-                  <button type="submit" class="btn btn-primary btnAlignR">Înregistrare</button>
+                  <button type="submit" id = "ButonAutentificare" class="btn btn-primary btnAlignL">Autentificare</button>
+                  <button type="submit" id = "ButonInregistrare" class="btn btn-primary btnAlignR">Înregistrare</button>
                 </form>
 
 
@@ -109,6 +109,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script type = "text/javascript" src = "../static/js/jsfrontend/testInregistrare.js"></script>
 </body>
 
 </html>
