--- a/backend/templates/inregistrare.html
+++ b/backend/templates/inregistrare.html
@@ -73,13 +73,17 @@
       <div id="container">
         <div id="banner"></div>
         <div class="menu">
-          <img
-            src="{{ url_for('static',filename='images/logo.svg') }}"
-            height="72px"
-          />
-          <div class="nameLogo">VoteBoat</div>
-        </div>
-        <!-- End of Nav Div -->
+          <a href="/" class="linkLogo">
+            <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
+            <div class="nameLogo">VoteBoat</div>
+          </a>
+          <div class="menuItems">
+            <a href="newPoll" title="Creează un poll nou">
+              <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
+            </a>
+            <p>Creează un poll now</p>
+          </div>
+        </div><!-- End of Nav Div -->
         <div class="header">
           <div id="continut1">
             <div style="padding: 210px 210px 110px 210px">
