--- a/backend/templates/rezultate.html
+++ b/backend/templates/rezultate.html
@@ -6,18 +6,45 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Favicon code-->
-  <link rel="apple-touch-icon" sizes="180x180" href= "{{ url_for('static',filename='images/apple-touch-icon.png') }}">
-  <link rel="icon" type="image/png" sizes="32x32" href= "{{ url_for('static',filename='images/favicon-32x32.png') }}">
-  <link rel="icon" type="image/png" sizes="16x16" href= "{{ url_for('static',filename='images/favicon-16x16.png') }}">
-  <link rel="manifest" href= "{{ url_for('static',filename='images/site.webmanifest') }}">
-  <link rel="mask-icon" href= "{{ url_for('static',filename='images/safari-pinned-tab.svg') }}" color="#0066cc">
-  <link rel="shortcut icon" href= "{{ url_for('static',filename='images/favicon.ico') }}">
-  <meta name="apple-mobile-web-app-title" content="VoteBoat">
-  <meta name="application-name" content="VoteBoat">
-  <meta name="msapplication-TileColor" content="#0066cc">
-  <meta name="msapplication-config" content= "{{ url_for('static',filename='images/browserconfig.xml') }}">
-  <meta name="theme-color" content="#ffffff">
-  <!--Favicon code end-->
+  <link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="{{ url_for('static',filename='images/apple-touch-icon.png') }}"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="{{ url_for('static',filename='images/favicon-32x32.png') }}"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="{{ url_for('static',filename='images/favicon-16x16.png') }}"
+/>
+<link
+  rel="manifest"
+  href="{{ url_for('static',filename='images/site.webmanifest') }}"
+/>
+<link
+  rel="mask-icon"
+  href="{{ url_for('static',filename='images/safari-pinned-tab.svg') }}"
+  color="#0066cc"
+/>
+<link
+  rel="shortcut icon"
+  href="{{ url_for('static',filename='images/favicon.ico') }}"
+/>
+<meta name="apple-mobile-web-app-title" content="VoteBoat" />
+<meta name="application-name" content="VoteBoat" />
+<meta name="msapplication-TileColor" content="#0066cc" />
+<meta
+  name="msapplication-config"
+  content="{{ url_for('static',filename='images/browserconfig.xml') }}"
+/>
+<meta name="theme-color" content="#ffffff" />
+<!--Favicon code end-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -34,9 +61,17 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <img src= "{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
-        <div class="nameLogo">VoteBoat</div>
-            </div><!-- End of Nav Div -->
+        <a href="/" class="linkLogo">
+          <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
+          <div class="nameLogo">VoteBoat</div>
+        </a>
+        <div class="menuItems">
+          <a href="newPoll" title="Creează un poll nou">
+            <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
+          </a>
+          <p>Creează un poll now</p>
+        </div>
+      </div><!-- End of Nav Div -->
             <div class="header">
 
 
