--- a/backend/templates/votPoll.html
+++ b/backend/templates/votPoll.html
@@ -53,8 +53,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
-      rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway:wght@400;500&family=Roboto&display=swap"
+    rel="stylesheet">
   <title>VoteBoat</title>
 </head>
 
@@ -63,12 +63,12 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <a href="logareC.html" class="linkLogo">
+        <a href="/" class="linkLogo">
           <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
           <div class="nameLogo">VoteBoat</div>
         </a>
         <div class="menuItems">
-          <a href="newPoll" title="Creează un vot nou">
+          <a href="newPoll" title="Creează un poll nou">
             <img src="{{ url_for('static',filename='images/addPoll.svg') }}" height="50px" class="svgGreen"/>
           </a>
           <p>Creează un vot nou</p>
@@ -77,82 +77,78 @@
       <div class="header">
         <div id="continut1">
           <div style="padding:210px 210px 110px 210px;">
+            <div id="continut2">
+              <div style="padding:0px 20px 20px 20px;">
 
 
-            <td style="padding-right:80px; padding-top:0px; padding-bottom:30px; ">
-              <div id="continut2">
-                <div style="padding:0px 20px 20px 20px;">
+                <div id="login" class="poll">
+
+                  <div class="DateLogin">
+                    <form style="width: 316.64px; height: 330.5px;">
+                      <div class="form-group">
+                        <label for="titluPoll" class="forum">Titlu</label>
+                        <input type="text" id="titluPoll" class="form-control" name="PollTitle" placeholder="Titlu">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="op1" class="forum">Opțiune 1</label>
+                        <input type="text" id="op1" class="form-control" name="option1" placeholder="Opțiune">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="op2" class="forum">Opțiune 2</label>
+                        <input type="text" id="op2" class="form-control" name="option2" placeholder="Opțiune">
+                      </div>
+
+                      <div class="form-group">
+                        <label for="opt3" class="forum">Opțiune 3</label>
+                        <input type="text" id="opt3" class="form-control" name="option3" placeholder="Opțiune">
+                      </div>
+                      <button type="submit" class="btn btn-primary btnAlignCreate">Creează</button>
+                    </form>
 
 
-            </td>
-
-            <div id="login" class="login">
-              <p class="titlu">AUTENTIFICARE</p>
-
-              </tr>
-              <div class="DateLogin">
-                <form>
-                  <div class="form-group">
-                    <label for="ad" class="forum">Adresă e-uvt</label>
-                    <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
                   </div>
-
-                  <div class="form-group">
-                    <label for="nrm" class="forum">Număr matricol</label>
-                    <input type="text" id="nrm" class="form-control" name="lastname" placeholder="Număr matricol">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="pass" class="forum">Text-cheie</label>
-                    <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
-                  </div>
-
-                  <button type="submit" class="btn btn-primary btnAlignL">Autentificare</button>
-                  <button type="submit" class="btn btn-primary btnAlignR">Înregistrare</button>
-                </form>
-
-
+                </div>
               </div>
-
             </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <!--Waves Container-->
-    <div>
-      <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-        <defs>
-          <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
-        </defs>
-        <g class="parallax">
-          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
-          <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-          <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
-          <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
-        </g>
-      </svg>
-    </div>
-    <!--Waves end aici a fost Denis-->
-    <div class="About">
-      <a id="About" href="Despre">©RSR</a>
+        <!--Waves Container-->
+        <div>
+          <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+            <defs>
+              <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+            </defs>
+            <g class="parallax">
+              <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)" />
+              <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+              <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+              <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+            </g>
+          </svg>
+        </div>
+        <!--Waves end aici a fost Denis-->
+
+
+      </div>
     </div>
   </div>
   <!--Header ends-->
   <!-- partial -->
-  
+
   <!-- Bootstrap scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-  crossorigin="anonymous"></script>
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-  crossorigin="anonymous"></script>
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-  crossorigin="anonymous"></script>
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
   <!--Bootstrap scripts end-->
 </body>
 
