--- a/backend/templates/logareC.html
+++ b/backend/templates/logareC.html
@@ -91,7 +91,7 @@
 
               </tr>
               <div class="DateLogin">
-                <form>
+                <form onsubmit="return false">
                   <div class="form-group">
                     <label for="ad" class="forum">Adresă e-uvt</label>
                     <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
@@ -107,8 +107,8 @@
                     <input type="password" id="pass" class="form-control" name="pss" placeholder="********">
                   </div>
 
-                  <button type="submit" class="btn btn-primary btnAlignL">Autentificare</button>
-                  <button type="submit" class="btn btn-primary btnAlignR">Înregistrare</button>
+                  <button type="submit"  id="ButonAutentificare" class="btn btn-primary btnAlignL">Autentificare</button>
+                  <button type="submit"  id="ButonInregistrare" class="btn btn-primary btnAlignR">Înregistrare</button>
                 </form>
 
 
@@ -153,6 +153,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
   integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
   crossorigin="anonymous"></script>
+  <script
+      type="text/javascript"
+      src="../static/js/jsfrontend/testInregistrare.js"
+    ></script>
   <!--Bootstrap scripts end-->
 </body>
 
