--- a/backend/templates/inregistrare.html
+++ b/backend/templates/inregistrare.html
@@ -107,7 +107,7 @@
                     <div class="DateLogin">
                       <form
                         style="width: 316.64px; height: 330.5px"
-                        onsubmit="return false"
+                        onsubmit="return false;"
                       >
                         <div class="form-group">
                           <label for="ad" class="forum">Adresă e-uvt</label>
