--- a/backend/templates/logareC.html
+++ b/backend/templates/logareC.html
@@ -91,7 +91,8 @@
 
               </tr>
               <div class="DateLogin">
-                <form onsubmit="return false">
+                <form onsubmit="return false"
+                onsubmit="return false;">
                   <div class="form-group">
                     <label for="ad" class="forum">Adresă e-uvt</label>
                     <input type="text" id="ad" class="form-control" name="firstname" placeholder="Adresă e-uvt">
